--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "code-server"]
 	path = code-server
 	url = git@github.com:vhqtvn/code-server.git
-[submodule "node"]
-	path = node
+[submodule "node-src"]
+	path = node-src
 	url = https://github.com/nodejs/node
