update code-server to 3.10.2

--- a/container/android/Dockerfile
+++ b/container/android/Dockerfile
@@ -1,21 +1,22 @@
-FROM bitriseio/android-ndk:v2020_06_06-08_39-b1988
-RUN apt -y remove gcc g++ clang
-RUN apt -y install curl dirmngr apt-transport-https lsb-release ca-certificates
+FROM bitriseio/android-ndk:v2021_05_29-08_17-b2417
+RUN DEBIAN_FRONTEND=noninteractive apt -y remove gcc gcc-5 g++ clang
+RUN DEBIAN_FRONTEND=noninteractive apt -y install \
+    curl dirmngr apt-transport-https lsb-release ca-certificates
 
 # Installs node.
 RUN curl -sSL https://deb.nodesource.com/setup_12.x | bash - && \
-    apt-get install -y nodejs
+    DEBIAN_FRONTEND=noninteractive apt-get install -y nodejs
 
 # Installs yarn.
 RUN curl -sSL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-    apt-get update && apt-get install -y yarn
+    DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y yarn
 
 # Installs envsubst.
-RUN apt-get install -y gettext-base
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y gettext-base
 
 # Misc build dependencies.
-RUN apt-get install -y git rsync
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y git rsync
 
 # We need latest jq from debian buster for date support.
 RUN ARCH="$(dpkg --print-architecture)" && \
@@ -26,14 +27,29 @@ RUN ARCH="$(dpkg --print-architecture)" && \
     curl -sSOL http://http.us.debian.org/debian/pool/main/j/jq/jq_1.5+dfsg-2+b1_$ARCH.deb && \
     dpkg -i jq*.deb && rm *.deb
 
-RUN apt -y autoremove
+RUN DEBIAN_FRONTEND=noninteractive apt -y autoremove
 
-RUN apt-get -y update && apt-get install -y make vim nano
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y make vim nano
 
-RUN add-apt-repository ppa:ubuntu-toolchain-r/test && apt-get update && apt-get install gcc-6 g++-6 gcc-6-multilib g++-6-multilib -y
+RUN update-alternatives --remove-all gcc || true; update-alternatives --remove-all g++ || true
 
-RUN apt-get -y install libc6-dev-i386
+RUN add-apt-repository ppa:ubuntu-toolchain-r/test && \
+    DEBIAN_FRONTEND=noninteractive apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install gcc-6 g++-6 gcc-6-multilib g++-6-multilib -y
+
+RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 10 && \
+    update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 10 && \
+    update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 && \
+    update-alternatives --set cc /usr/bin/gcc && \
+    update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 && \
+    update-alternatives --set c++ /usr/bin/g++
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y install libc6-dev-i386
 
 ENV NDK=/opt/android-ndk
 ENV NDK_BIN_ROOT=$NDK/toolchains/llvm/prebuilt/linux-x86_64/bin
 ENV ANDROID_ARCH=aarch64
+
+
+ENTRYPOINT /bin/bash
