--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,6 +25,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Free additional disk space
+        run: |
+          sudo apt purge -yq $(dpkg -l | grep '^ii' | awk '{ print $2 }' | grep -P '(cabal-|dotnet-|ghc-|libmono|php)') \
+            liblldb-6.0 libllvm6.0:amd64 mono-runtime-common monodoc-manual powershell ruby
+          sudo apt autoremove -yq
+          sudo rm -rf /opt/hostedtoolcache /usr/local /usr/share/dotnet /usr/share/swift
       - name: Build docker
         run: ./dev.sh build-android-env
       - name: Create archive
