--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux]
+    runs-on: vscode-android-server
     strategy:
       matrix:
         arch:
@@ -44,7 +44,7 @@ jobs:
           path: "*.tgz"
   publish:
     needs: build
-    runs-on: [self-hosted, linux]
+    runs-on: vscode-android-server
     steps:
       - name: Git clone
         uses: actions/checkout@v4
