Enhance vseditor-repo.sh with architecture handling and Dockerfile update
- Added functions in vseditor-repo.sh to normalize and rewrite architecture metadata for x86_64 to amd64, improving compatibility with package management.
- Updated the Dockerfile to install the lz4 package, enabling support for compressed package lists.
- Refined the activate and install_pkg functions to ensure proper architecture handling during package updates and installations.

--- a/container/android/Dockerfile
+++ b/container/android/Dockerfile
@@ -298,4 +298,7 @@ RUN git config --global --add safe.directory /vscode \
     && git config --global --add safe.directory /vscode/code-server/lib/vscode \
     && git config --global --add safe.directory /vscode/node-src
 
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y install \
+    lz4
+
 ENTRYPOINT /bin/bash
