Update GitHub Actions workflow to support Ubuntu 24.04 and optimize build process
- Changed the runner from ubuntu-latest to ubuntu-24.04 to utilize the latest features and improvements.
- Added a swap file setup to accommodate heavy builds, preventing potential memory issues.
- Enhanced the archive creation step to ensure the 'time' command is available, improving build time tracking and error handling.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         arch:
@@ -36,6 +36,13 @@ jobs:
           sudo apt autoremove -yq
           sudo apt clean
           sudo rm -fr /opt/ghc /opt/hostedtoolcache /usr/lib/node_modules /usr/local /usr/share/dotnet /usr/share/swift
+      - name: Add swap for heavy builds
+        run: |
+          sudo swapoff -a || true
+          sudo fallocate -l 4G /swapfile
+          sudo chmod 600 /swapfile
+          sudo mkswap /swapfile
+          sudo swapon /swapfile
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
@@ -46,7 +53,14 @@ jobs:
           docker pull $IMAGE_NAME:master
           docker tag $IMAGE_NAME:master vsandroidenv:latest
       - name: Create archive
-        run: ./dev.sh docker-run bash -c './dev.sh apply-patch && BUILD_NODE=1 BUILD_RELEASE=1 ANDROID_ARCH=${{ matrix.arch }} ./dev.sh release'
+        run: |
+          ./dev.sh docker-run bash -c '
+            set -e
+            if ! command -v /usr/bin/time >/dev/null 2>&1; then
+              apt-get update && apt-get install -y time
+            fi
+            /usr/bin/time -v bash -c "./dev.sh apply-patch && BUILD_NODE=1 BUILD_RELEASE=1 ANDROID_ARCH=${{ matrix.arch }} ./dev.sh release"
+          '
       - name: Store artifacts
         uses: actions/upload-artifact@v4
         with:
