Enhance GitHub Actions workflow for cleanup and optimization
- Added additional cleanup commands to remove specific directories and prune Docker images, improving resource management during the build process.
- This change aims to optimize the workflow by ensuring unnecessary files and images are removed, leading to faster build times and reduced storage usage.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,9 @@ jobs:
             firefox google-chrome-stable microsoft-edge-stable mono-devel mono-runtime-common monodoc-manual ruby
           sudo apt autoremove -yq
           sudo apt clean
-          sudo rm -fr /opt/ghc /opt/hostedtoolcache /usr/lib/node_modules /usr/local /usr/share/dotnet /usr/share/swift
+          sudo rm -fr /opt/ghc /opt/hostedtoolcache /usr/lib/node_modules /usr/local /usr/share/dotnet /usr/share/swift /usr/local/lib/android /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
       - name: Add swap for heavy builds
         run: |
           sudo swapoff -a || true
